; ModuleID = '/home/carl/AnghaBench/postgres/contrib/file_fdw/extr_file_fdw.c_is_valid_option.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/file_fdw/extr_file_fdw.c_is_valid_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.FileFdwOption = type { i64, i64 }

@valid_options = common dso_local global %struct.FileFdwOption* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @is_valid_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_valid_option(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.FileFdwOption*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.FileFdwOption*, %struct.FileFdwOption** @valid_options, align 8
  store %struct.FileFdwOption* %7, %struct.FileFdwOption** %6, align 8
  br label %8

8:                                                ; preds = %28, %2
  %9 = load %struct.FileFdwOption*, %struct.FileFdwOption** %6, align 8
  %10 = getelementptr inbounds %struct.FileFdwOption, %struct.FileFdwOption* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %31

13:                                               ; preds = %8
  %14 = load i64, i64* %5, align 8
  %15 = load %struct.FileFdwOption*, %struct.FileFdwOption** %6, align 8
  %16 = getelementptr inbounds %struct.FileFdwOption, %struct.FileFdwOption* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp eq i64 %14, %17
  br i1 %18, label %19, label %27

19:                                               ; preds = %13
  %20 = load %struct.FileFdwOption*, %struct.FileFdwOption** %6, align 8
  %21 = getelementptr inbounds %struct.FileFdwOption, %struct.FileFdwOption* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = load i8*, i8** %4, align 8
  %24 = call i64 @strcmp(i64 %22, i8* %23)
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %19
  store i32 1, i32* %3, align 4
  br label %32

27:                                               ; preds = %19, %13
  br label %28

28:                                               ; preds = %27
  %29 = load %struct.FileFdwOption*, %struct.FileFdwOption** %6, align 8
  %30 = getelementptr inbounds %struct.FileFdwOption, %struct.FileFdwOption* %29, i32 1
  store %struct.FileFdwOption* %30, %struct.FileFdwOption** %6, align 8
  br label %8

31:                                               ; preds = %8
  store i32 0, i32* %3, align 4
  br label %32

32:                                               ; preds = %31, %26
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i64 @strcmp(i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
